Fix background overlapping

--- a/css/main.css
+++ b/css/main.css
@@ -194,6 +194,10 @@ footer {
   font-size: 0.7em;
   padding: 5em 50px 0;
 
+  @media (min-width: 960px) {
+    padding-top: calc(100vw / 3 - 240px); /* bottom picture has aspect ratio of 3:1 */
+  }
+
   & aside {
     font-style: italic;
     padding: 1.5em 0 0.5em;
